# IGE

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  scorecards.yml  wheels.yml
crates/ige-c/: Cargo.toml  ige.h
crates/ige-c/src/: lib.rs
crates/ige-core/: Cargo.toml
crates/ige-core/benches/: ler_axis_aligned_bench.rs  lir.rs  lir_axis_aligned_bench.rs  lir_oriented_bench.rs  mic_bench.rs  real_world.rs
crates/ige-core/demos/: run_all.rs  visualize.rs
crates/ige-core/demos/visualize_modules/: cli.rs  generators.rs  io.rs  mod.rs  render.rs  shapes.rs  stats.rs
crates/ige-core/examples/: generate_line_features.rs  generate_polygon_features.rs  generate_real_lines.rs  generate_real_polygons.rs  visualize.rs
crates/ige-core/src/: lib.rs  prelude.rs  tuning.rs
crates/ige-core/src/algorithms/: mod.rs
crates/ige-core/src/axis_aligned/: bcrs_grid.rs  containment.rs  histogram.rs  mod.rs  sdf.rs  vertex_grid.rs
crates/ige-core/src/bcrs/: candidates.rs  certify.rs  expand.rs  fallback.rs  fast.rs  mod.rs  parallel.rs  (+2 more)
crates/ige-core/tests/: bcrs_quality_regression.rs  ige_tests.rs  ler_line_obstacles_tests.rs  lir_approximate_oriented_tests.rs  lir_axis_aligned_tests.rs  mic_geos_comparison_tests.rs  mic_tests.rs  mic_vs_geos_tests.rs  obb_tests.rs  real_world_tests.rs
crates/ige-py/: Cargo.toml  README.md  pyproject.toml
crates/ige-py/src/: lib.rs
openevolve/: README.md
(+74 files in other folders)
