[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "liriap"
version = "0.1.0"
description = "Inscribed Geometry Engine Python bindings"
requires-python = ">=3.9"

[tool.maturin]
module-name = "liriap._native"
python-source = "python"
manifest-path = "crates/liriap-py/Cargo.toml"
